k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend_net: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - env:
            - name: CACHE_TTL
              valueFrom:
                configMapKeyRef:
                  key: CACHE_TTL
                  name: env
            - name: DB_DATA_DIR
              valueFrom:
                configMapKeyRef:
                  key: DB_DATA_DIR
                  name: env
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_PASSWORD
                  name: env
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DB_USERNAME
                  name: env
            - name: MONGO_INITDB_ROOT_PASSWORD
            - name: MONGO_INITDB_ROOT_USERNAME
            - name: MQ_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MQ_PASSWORD
                  name: env
            - name: MQ_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: MQ_USERNAME
                  name: env
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: env
          image: mongo
          name: mongdb
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-claim0
      restartPolicy: Always
      volumes:
        - name: mongodb-claim0
          persistentVolumeClaim:
            claimName: mongodb-claim0
status: {}
