k8s/publicservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: publicservice
  name: publicservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: publicservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend_net: "true"
        io.kompose.network/frontend_net: "true"
        io.kompose.service: publicservice
    spec:
      containers:
        - image: public-service
          name: publicservice
          ports:
            - containerPort: 3003
          resources: {}
      restartPolicy: Always
status: {}
