k8s/subscriptionrabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: subscriptionrabbit
  name: subscriptionrabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: subscriptionrabbit
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend_net: "true"
        io.kompose.service: subscriptionrabbit
    spec:
      containers:
        - env:
            - name: CACHE_TTL
              valueFrom:
                configMapKeyRef:
                  key: CACHE_TTL
                  name: env
            - name: DB_DATA_DIR
              valueFrom:
                configMapKeyRef:
                  key: DB_DATA_DIR
                  name: env
            - name: DB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_PASSWORD
                  name: env
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DB_USERNAME
                  name: env
            - name: MQ_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MQ_PASSWORD
                  name: env
            - name: MQ_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: MQ_USERNAME
                  name: env
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: env
            - name: RABBITMQ_DEFAULT_PASS
            - name: RABBITMQ_DEFAULT_USER
          image: rabbitmq:3-management
          name: subscriptionrabbit
          ports:
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
status: {}
