k8s/subscriptionservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: subscriptionservice
  name: subscriptionservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: subscriptionservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend_net: "true"
        io.kompose.service: subscriptionservice
    spec:
      containers:
        - image: subscription-service
          name: subscriptionservice
          resources: {}
      restartPolicy: Always
status: {}
