k8s/publicservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: publicservice
  name: publicservice
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
  selector:
    io.kompose.service: publicservice
status:
  loadBalancer: {}
